Первый коммит добавил кнопку и стили чуть подтянул

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/233f16875c.js" crossorigin="anonymous"></script>
 
-    <title>WasHoo</title>
+    <title>WashCar</title>
 </head>
 <body>
     <header>
-        <span class="logo">WasHoo</span>
+        <span class="logo">WashCar</span>
         <div class="nav">
             <a href="#">Главная</a>
             <a href="#">О Компании</a>
@@ -21,6 +21,12 @@
             <i class="fa-solid fa-bars"></i>
         </span>
     </header>
+
+    <section class="full-page">
+        <h1>WashCar - удобный сервис для всех и каждого</h1>
+        <h3>Удобный, быстрый, легкий, дешевый, качественный</h3>
+        <button>Узнать больше <i class="fa-solid fa-arrow-right-long"></i></button>
+    </section>
     
 <script src="js/index.js"></script>
 </body>
