добавил стилей чуточку

--- a/index.html
+++ b/index.html
@@ -24,8 +24,27 @@
 
     <section class="full-page">
         <h1>WashCar - удобный сервис для всех и каждого</h1>
-        <h3>Удобный, быстрый, легкий, дешевый, качественный</h3>
+        <h3>Удобный, быстрый, дешевый, качественный</h3>
         <button>Узнать больше <i class="fa-solid fa-arrow-right-long"></i></button>
+    </section>
+
+    <section class="features">
+        <div>
+            <img src="/img/car-wash-detailing-station.jpg" alt="">
+            <h4>Быстрое Обслуживание</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, minima.</p>
+        </div>
+        <div>
+            <img src="img/car-wash-detailing-station (1).jpg" alt="">
+            <h4>Качественное Обслуживание</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, minima.</p>
+        </div>
+        <div>
+            <img src="/img/beautiful-car-at-washing-service.jpg" alt="">
+            <h4>Доступное Обслуживание</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, minima.</p>
+        </div>
+    
     </section>
     
 <script src="js/index.js"></script>
