Второй каммит добавил отправку на почту

--- a/index.html
+++ b/index.html
@@ -44,8 +44,24 @@
             <h4>Доступное Обслуживание</h4>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, minima.</p>
         </div>
-    
     </section>
+
+    <section class="bg-fixed">
+        <h3>Форма Подписки</h3>
+        <input type="email" placeholder="Ваш email">
+        <button>Подписаться<i class="fa-solid fa-arrow-right-long"></i></button>
+    </section>
+
+    <footer>
+        <div class="up-button">
+            <i class="fa-solid fa-arrow-up-long"></i>
+        </div>
+        <div class="social">
+            <div><i class="fa-brands fa-youtube"></i></div>
+            <div><i class="fa-brands fa-vk"></i></div>
+            <div><i class="fa-brands fa-telegram"></i></div>
+        </div>
+    </footer>
     
 <script src="js/index.js"></script>
 </body>
