Добавил футер, кнопочки

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         </span>
     </header>
 
+    <div id="hidden-menu">
+        <span class="close">
+            <i class="fa-solid fa-rectangle-xmark"></i>
+        </span>
+        <h2>Меню</h2>
+        <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Про компанию</a></li>
+            <li><a href="#">Услуги</a></li>
+        </ul>
+    </div>
+
     <section class="full-page">
         <h1>WashCar - удобный сервис для всех и каждого</h1>
         <h3>Удобный, быстрый, дешевый, качественный</h3>
@@ -62,7 +74,8 @@
             <div><i class="fa-brands fa-telegram"></i></div>
         </div>
     </footer>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="js/index.js"></script>
+
 </body>
 </html>
