--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/233f16875c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/slick.css">
 
     <title>WashCar</title>
 </head>
@@ -58,6 +59,17 @@
         </div>
     </section>
 
+    <section class="gallery">
+        <h2>Немного Фотографий</h2>
+        <div id="slider">
+            <div><img src="https://img.freepik.com/free-photo/car-wash-detailing-station_1303-22319.jpg?w=1380&t=st=1659969599~exp=1659970199~hmac=ad90ce9f3cb2654b0e46398c8433148daa119f38fd6efaa9418ca1eb78727806"></div>
+            <div><img src="https://img.freepik.com/free-photo/close-up-on-car-care-process_23-2149193593.jpg?w=1380&t=st=1659969612~exp=1659970212~hmac=03a75ad5c79e3c7ac72bbe25cd70820b2b3f502a02db126119b8897830d4972b"></div>
+            <div><img src="https://img.freepik.com/free-photo/man-wash-car-using-shampoo_1150-6979.jpg?w=1380&t=st=1659969624~exp=1659970224~hmac=1cc48dfe39760898848957d8070f4faf9ca3baa69646d091e3d7667bfcfed412"></div>
+            <div><img src="https://img.freepik.com/free-photo/car-wash-detailing-station_1303-22309.jpg?w=1380&t=st=1659969662~exp=1659970262~hmac=efddb9c9f0cc351e39f6f3d100b00710d764fcc31e8fb2150b5af726df09720d"></div>
+        </div>
+
+    </section>
+
     <section class="bg-fixed">
         <h3>Форма Подписки</h3>
         <input type="email" placeholder="Ваш email">
@@ -75,7 +87,9 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="js/index.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/index.js"></script>
+
 
 </body>
 </html>
